--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -92,6 +92,82 @@ jobs:
     - name: Check number of chunks
       run: if [ "${{ steps.discover.outputs.chunk-count }}" != "1" ]; then exit 1; fi
 
+  setup-pr-workflows:
+    name: Setup as in PR for workflows
+    runs-on: ubuntu-latest
+    outputs:
+      galaxy-head-sha: ${{ steps.get-galaxy-sha.outputs.galaxy-head-sha }}
+      repository-list: ${{ steps.discover.outputs.repository-list }}
+      tool-list: ${{ steps.discover.outputs.tool-list }}
+      chunk-count: ${{ steps.discover.outputs.chunk-count }}
+      chunk-list: ${{ steps.discover.outputs.chunk-list }}
+    strategy:
+      matrix:
+        python-version: [3.7]
+    steps:
+    - name: Print github context properties
+      run: |
+        echo 'event: ${{ github.event_name }}'
+        echo 'sha: ${{ github.sha }}'
+        echo 'ref: ${{ github.ref }}'
+        echo 'head_ref: ${{ github.head_ref }}'
+        echo 'base_ref: ${{ github.base_ref }}'
+        echo 'event.before: ${{ github.event.before }}'
+        echo 'event.after: ${{ github.event.after }}'
+    - name: Determine latest commit in the Galaxy repo
+      id: get-galaxy-sha
+      run: echo "::set-output name=galaxy-head-sha::$(git ls-remote https://github.com/${{ env.GALAXY_FORK }}/galaxy refs/heads/${{ env.GALAXY_BRANCH }} | cut -f1)"
+    - uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Cache .cache/pip
+      uses: actions/cache@v2
+      id: cache-pip
+      with:
+        path: ~/.cache/pip
+        key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ steps.get-galaxy-sha.outputs.galaxy-head-sha }}
+    - name: Cache .planemo
+      uses: actions/cache@v2
+      id: cache-planemo
+      with:
+        path: ~/.planemo
+        key: planemo_cache_py_${{ matrix.python-version }}_gxy_${{ steps.get-galaxy-sha.outputs.galaxy-head-sha }}
+    # Install the `wheel` package so that when installing other packages which
+    # are not available as wheels, pip will build a wheel for them, which can be cached.
+    - name: Install wheel
+      run: pip install wheel
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Introduce a change on a test workflow
+      run: |
+        git config --global user.name "Arthur Dent"
+        git config --global user.email "a.dent@galaxyproject.org"
+        echo "" >> test/workflows/example3/tutorial.ga
+        git commit -m bump test/workflows/example3/tutorial.ga
+    - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
+      # TODO uses: ./
+      uses: bernt-matthias/planemo-ci-action@topic/ci-for-wf
+      id: discover
+      with:
+        workflows: true
+        create-cache: ${{ steps.cache-pip.outputs.cache-hit != 'true' || steps.cache-planemo.outputs.cache-hit != 'true' }}
+        galaxy-fork: ${{ env.GALAXY_FORK }}
+        galaxy-branch: ${{ env.GALAXY_BRANCH }}
+        max-chunks: ${{ env.MAX_CHUNKS }}
+        python-version: ${{ matrix.python-version }}
+    - name: Check commit range
+      run: if ! grep "\.\." <<<$(echo ${{ steps.discover.outputs.commit-range }}); then exit 1; fi
+    - name: Check content of repository list
+      run: |
+        if ! grep -q "example3" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then exit 1; fi
+        if grep -q "example4" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then exit 1; fi
+    - name: Check content of tool list
+      run: |
+        if [ -n "${{ steps.discover.outputs.tool-list }}"]; then exit 1; fi
+    - name: Check number of chunks
+      run: if [ "${{ steps.discover.outputs.chunk-count }}" != "1" ]; then exit 1; fi
+
   setup-ci-tools:
     name: Setup as in CI for tools
     runs-on: ubuntu-latest
@@ -156,8 +232,8 @@ jobs:
       run: if [ "${{ steps.discover.outputs.chunk-count }}" != "1" ]; then exit 1; fi
   
   lint:
-    name: Test linting
-    needs: setup-pr-tools
+    name: Test linting of tools and workflows
+    needs: [setup-pr-tools, setup-pr-workflows]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -176,24 +252,20 @@ jobs:
       with:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
-    - name: Version
-      run: python --version
-
     - name: Install wheel
       run: pip install wheel
-
     - name: Planemo lint tools
       # TODO uses: ./
       uses: bernt-matthias/planemo-ci-action@topic/ci-for-wf
       with:
         mode: lint
         repository-list: ${{ needs.setup-pr-tools.outputs.repository-list }}
-        tool-list: ${{ needs.setup-pr-tools.outputs.tool-list }} 
+        tool-list: ${{ needs.setup-pr-tools.outputs.tool-list }}
     - name: Planemo lint workflows
       # TODO uses: ./
       uses: bernt-matthias/planemo-ci-action@topic/ci-for-wf
       with:
-        lint-mode: true
+        mode: lint
         workflows: true
         repository-list: "test/tools/example3/"
         tool-list: "IGNORED AT THE MOMENT"
