--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -216,21 +216,23 @@ jobs:
         max-chunks: ${{ env.MAX_CHUNKS }}
         python-version: ${{ matrix.python-version }}
         github-event-name-override: 'schedule'
-
     - name: Check for empty commit range
       run: if [ -n "${{ steps.discover.outputs.commit-range }}" ]; then exit 1; fi
+    # note: ci_find_repos will find all tools and workflows
     - name: Check that all tools an workflows are in the repository list
       run: |
         if ! grep -q "tool1" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then exit 1; fi
         if ! grep -q "tool2" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then exit 1; fi
         if ! grep -q "example3" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then exit 1; fi
         if ! grep -q "example4" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then exit 1; fi
+    # note: ci_find_tools will find onlytools
     - name: Check that all tools are in the tool list
       run: |
         if ! grep -q "tool1.xml" <<<$(echo "${{ steps.discover.outputs.tool-list }}"); then exit 1; fi
         if ! grep -q "tool2.xml" <<<$(echo "${{ steps.discover.outputs.tool-list }}"); then exit 1; fi
+    # chunk-count will only consider tools/workflows depending on the workflow input to the action
     - name: Check that the number of chunks is two, i.e. the number of tools
-      run: if[ "${{ steps.discover.outputs.chunk-count }}" != "2" ]; then exit 1; fi
+      run: if [ "${{ steps.discover.outputs.chunk-count }}" != "2" ]; then exit 1; fi
   
   lint:
     name: Test linting of tools and workflows
