--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -325,6 +325,7 @@ jobs:
       with:
         name: 'Tool test output ${{ matrix.chunk }}'
         path: upload
+    - name: Planemo test workflows
       # TODO uses: ./
       uses: bernt-matthias/planemo-ci-action@topic/ci-for-wf
       id: test-workflows
