--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -270,7 +270,7 @@ jobs:
         mode: lint
         workflows: true
         repository-list: "${{ needs.setup-pr-workflows.outputs.repository-list }}"
-        tool-list: ${{ needs.setup-pr-workflows.outputs.tool-list }}"
+        tool-list: "${{ needs.setup-pr-workflows.outputs.tool-list }}"
 
   test:
     name: Test testing of tools and worflows
