--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -203,7 +203,7 @@ jobs:
         # TODO main
         ref: master
         fetch-depth: 1
-    - name: TEST
+    - name: Artificially exclude workflows (because ci_find_repos discovers tool and workflow repos)
       run: echo 'test/workflows/' > .tt_skip
     - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
       # TODO uses: ./
@@ -223,15 +223,15 @@ jobs:
     # note: ci_find_repos will find all tools and workflows
     - name: Check that all tools an workflows are in the repository list
       run: |
-        if ! grep -q "tool1" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then exit 1; fi
-        if ! grep -q "tool2" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then exit 1; fi
-        if ! grep -q "example3" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then exit 1; fi
-        if ! grep -q "example4" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then exit 1; fi
+        if ! grep -q "tool1" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then echo "tool1 must be in the repo list"; exit 1; fi
+        if ! grep -q "tool2" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then echo "tool2 must be in the repo list"; exit 1; fi
+        if grep -q "example3" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then echo "example3 must not be in the repo list"; exit 1; fi
+        if grep -q "example4" <<<$(echo "${{ steps.discover.outputs.repository-list }}"); then echo "example4 must not be in the repo list"; exit 1; fi
     # note: ci_find_tools will find onlytools
     - name: Check that all tools are in the tool list
       run: |
-        if ! grep -q "tool1.xml" <<<$(echo "${{ steps.discover.outputs.tool-list }}"); then exit 1; fi
-        if ! grep -q "tool2.xml" <<<$(echo "${{ steps.discover.outputs.tool-list }}"); then exit 1; fi
+        if ! grep -q "tool1.xml" <<<$(echo "${{ steps.discover.outputs.tool-list }}"); then echo "tool1.xml must be in the repo list"; exit 1; fi
+        if ! grep -q "tool2.xml" <<<$(echo "${{ steps.discover.outputs.tool-list }}"); then echo "tool2.xml must be in the repo list"; exit 1; fi
     # chunk-count will only consider tools/workflows depending on the workflow input to the action
     - name: Check that the number of chunks is two, i.e. the number of tools
       run: if [ "${{ steps.discover.outputs.chunk-count }}" != "2" ]; then exit 1; fi
