--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -155,7 +155,7 @@ jobs:
 
   lint:
     name: Test linting of tools and workflows
-    needs: [setup-pr-tools, setup-pr-workflows]
+    needs: [setup-pr-tools]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -172,7 +172,7 @@ jobs:
       id: cache-pip
       with:
         path: ~/.cache/pip
-        key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
+        key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup-pr-tools.outputs.galaxy-head-sha }}
     - name: Install wheel
       run: pip install wheel
     - name: Planemo lint tools
