--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -69,6 +69,8 @@ jobs:
       id: discover
       with:
         workflows: true
+        # TODO remove planemo-version
+        planemo-version: https://github.com/galaxyproject/planemo/archive/18a41d3a67a0df5b816c8b5ebb5e94d292dd9481.zip
         create-cache: ${{ steps.cache-pip.outputs.cache-hit != 'true' || steps.cache-planemo.outputs.cache-hit != 'true' }}
         galaxy-fork: ${{ env.GALAXY_FORK }}
         galaxy-branch: ${{ env.GALAXY_BRANCH }}
@@ -131,6 +133,8 @@ jobs:
       with:
         workflows: true
         create-cache: true
+        # TODO remove planemo-version
+        planemo-version: https://github.com/galaxyproject/planemo/archive/18a41d3a67a0df5b816c8b5ebb5e94d292dd9481.zip
         galaxy-fork: ${{ env.GALAXY_FORK }}
         galaxy-branch: ${{ env.GALAXY_BRANCH }}
         max-chunks: ${{ env.MAX_CHUNKS }}
@@ -224,6 +228,8 @@ jobs:
         mode: test
         workflows: true
         setup-cvmfs: true
+        # TODO remove planemo-version
+        planemo-version: https://github.com/galaxyproject/planemo/archive/18a41d3a67a0df5b816c8b5ebb5e94d292dd9481.zip
         repository-list: ${{ needs.setup-ci-workflows.outputs.repository-list }}
         galaxy-fork: ${{ env.GALAXY_FORK }}
         galaxy-branch: ${{ env.GALAXY_BRANCH }}
