--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Installs planemo and discovers changed repositories of tools or wo
 author: 'iuc@galaxyproject.org'
 inputs:
   mode:
-    descriptions: 'Mode selector: setup|lint|test|combine|check|deploy'
+    descriptions: 'Mode selector: setup|lint|test|combine|check|deploy|autoupdate'
     default: 'setup'
   create-cache: 
     description: 'Set false if creating a cache is not needed'
